# quad-v2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  QUADV2.urdf  README.md  V2.yaml  color_scheme.py  quad  quad_lib.hpp  reference.md  requirements.txt  robot_colors.py  simulate.py  test.py  test_color_scheme.py  toolchain-aarch64.cmake
.github/workflows/: build.yml
assets/: quad.service  toolchain-x86_64.cmake
configs/: V2.urdf  V2.yaml
exe/: test.cpp
include/: Chassis.hpp  Config.hpp  ConfigLoader.hpp  Leg.hpp  Robot.hpp  SSC32U.hpp  Servo.hpp  Teleop.hpp  UDPSocket.hpp  config_loader.hpp  helper.hpp
include/configs/: V1.hpp
libquad/: CMakeLists.txt
libquad/include/: Chassis.hpp  ConfigLoader.hpp  Leg.hpp  spatial.hpp
libquad/include/eigen_plugins/: matrixbase.hpp  transform.hpp
libquad/src/: Chassis.cpp  Leg.cpp
libquad/test/: leg_tests.cpp
libquad/tests/: CMakeLists.txt
scripts/: dynamics.ipynb  fd.ipynb  plot_robot.py  quad_functions.py  requirements.txt  tests.py
src/: Chassis.cpp  Leg.cpp  Robot.cpp  SSC32U.cpp  Servo.cpp  Teleop.cpp  UDPSocket.cpp  main.cpp  position_control.cpp  sdl_controls.cpp  sdl_test.cpp
test/: leg_test.cpp
